[gd_scene load_steps=5 format=3 uid="uid://dhpkwwwvwguk5"]

[ext_resource type="Script" path="res://scenes/GameScene/Stations/Trawl.gd" id="1_s2uc2"]
[ext_resource type="PackedScene" uid="uid://dk4fm1rhxv6h" path="res://scenes/GameScene/Stations/station.tscn" id="2_c5vwa"]
[ext_resource type="PackedScene" uid="uid://by0wrcdaaqjrh" path="res://scenes/UI/Stations/Trawl/TrawlUI.tscn" id="3_0ba2o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2r6xj"]

[node name="Trawl" type="Node2D"]
script = ExtResource("1_s2uc2")

[node name="AnchorLeft" type="RigidBody2D" parent="."]
position = Vector2(83, 91)
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnchorLeft"]
shape = SubResource("CircleShape2D_2r6xj")
debug_color = Color(0, 0, 0, 0.42)

[node name="AnchorRight" type="RigidBody2D" parent="."]
position = Vector2(115, 92)
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnchorRight"]
shape = SubResource("CircleShape2D_2r6xj")
debug_color = Color(0, 0, 0, 0.42)

[node name="Net" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Net"]
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[node name="Station" parent="." instance=ExtResource("2_c5vwa")]
position = Vector2(96, 32)

[node name="Collection" type="Node2D" parent="."]

[node name="TrawlUI" parent="." instance=ExtResource("3_0ba2o")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = 64.0
offset_top = -23.0
offset_right = 128.0
offset_bottom = 9.0
grow_vertical = 0

[connection signal="area_entered" from="Net" to="." method="_on_net_area_entered"]
